k8s/security-networkpolicy/sec-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sec-backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sec-backend
  template:
    metadata:
      labels:
        app: sec-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
