k8s/security-networkpolicy/np-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      role: backend
  template:
    metadata:
      labels:
        app: backend
        role: backend
    spec:
      containers:
        - name: backend
          image: nginx:1.25
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev
spec:
  selector:
    app: backend
    role: backend
  ports:
    - port: 80
      targetPort: 80
