k8s/security-networkpolicy/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-deny-all
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: backend
      role: backend
  policyTypes:
    - Ingress
  ingress: []
